add initial nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Tracy French</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+      </ul>
+    </nav>
+
     <script src="./index.js"></script>
   </body>
 </html>
