--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tracy French</title>
+    <link href="./styles.css" rel="stylesheet"></link>
   </head>
   <body>
     <nav>
