--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./styles.css" rel="stylesheet"></link>
   </head>
   <body>
-    <nav>
+    <nav class="global-nav">
       <ul>
         <li>
           <a href="/">Home</a>
